--- a/layout-iscroll2.html
+++ b/layout-iscroll2.html
@@ -100,6 +100,9 @@ $(document).ready(function(){
 					'default': nextPage,								//	Space
 					'shift': prevPage									//	shift-Space
 				},
+				// combined navigation with actions..
+				38: function(){togglePageView()},						//	Up
+				40: function(){togglePageView()},						//	Down
 
 				70: function(){											//	F
 					togglePageFitMode()
@@ -136,112 +139,6 @@ $(document).ready(function(){
 	setCurrentPage(0)
 	//limit_scroll()
 })
-
-function makeScrollHandler(root, callback){
-
-	// local data...
-	var scrolling = false
-	var touch = false
-	var touches = 0
-	var start
-	var prev_x
-	var prev_t
-	var shift
-	var scale
-	var x
-	var t
-	var dx
-	var dt
-
-	function startMoveHandler(evt, callback){
-		prev_t = event.timeStamp || Date.now();
-		if(event.touches != null){
-			touch = true
-		}
-		scrolling = true
-		scroller.state = 'scrolling'
-		//root.trigger('userScrollStart')
-		//togglePageDragging('on')
-		shift = getMagazineShift()
-		scale = getMagazineScale()
-		// get the user coords...
-		prev_x = touch ? event.touches[0].pageX : evt.clientX
-		start = prev_x
-
-		return false
-	}
-	// XXX add limits to this...
-	// XXX try and make this adaptive to stay ahead of the lags...
-	function moveHandler(evt){
-		evt.preventDefault()
-		t = event.timeStamp || Date.now();
-		// get the user coords...
-		x = touch ? event.touches[0].pageX : evt.clientX
-		touches = touch ? event.touches.length : 0
-		if(scrolling){
-			shift += x - prev_x
-			shiftMagazineTo(shift, scale)
-		}
-		dx = x - prev_x
-		dt = t - prev_t
-		prev_t = t
-		prev_x = x
-		//root.trigger('userScroll')
-	}
-	function endMoveHandler(evt){
-		x = touch ? event.changedTouches[0].pageX : evt.clientX
-		touch = false
-		scrolling = false
-		scroller.state = 'waiting'
-		touches = 0
-		//togglePageDragging('off')
-		// XXX add speed to this...
-		//root.trigger('userScrollEnd')
-		callback && callback(dx/dt, start - x)
-	}
-
-	var scroller = {
-		start: function(){
-			this.state = 'waiting'
-			// XXX STUB: this makes starting the scroll a bit sluggish, 
-			//		find a faster way...
-			togglePageDragging('on')
-
-			// NOTE: if we bind both touch and mouse events, on touch devices they 
-			//		might start interfering with each other...
-			if('ontouchmove' in window){
-				root
-					.on('touchstart', startMoveHandler)
-					.on('touchmove', moveHandler) 
-					.on('touchend', endMoveHandler)
-			} else {
-				root
-					.on('mousedown', startMoveHandler) 
-					.on('mousemove', moveHandler) 
-					.on('mouseup', endMoveHandler) 
-			}
-			return this
-		},
-		stop: function(){
-			this.state = 'stopped'
-			if('ontouchmove' in window){
-				root
-					.off('touchstart', startMoveHandler)
-					.off('touchmove', moveHandler) 
-					.off('touchend', endMoveHandler)
-			} else {
-				root
-					.off('mousedown', startMoveHandler) 
-					.off('mousemove', moveHandler) 
-					.off('mouseup', endMoveHandler) 
-			}
-			return this
-		},
-		// NOTE: this is updated live but not used by the system in any way...
-		state: 'stopped'
-	}
-	return scroller
-}
 
 
 var SCROLL_LIMIT = 800 * 1.5
