removed some legacy...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -757,8 +757,7 @@ $(document).ready(function(){
 						<a id="downloader" download="magazine.json">download magazine...</a>
 						<input type="file" id="upload" name="files[]"/>
 						Alternative layout: <a href="./layout.html">native scroll</a>, 
-						<a href="./layout-iscroll.html">iscroll</a>, 
-						<a href="./layout-iscroll2.html">hand-written drag</a>
+						<a href="./index2.html">hand-written drag</a>
 					</p>
 
 					<hr noshade color="silver">
